   'logical', which is passed down to parallel::detectCores() as-is.
   The default is TRUE but it can be changed by setting the R option
   'parallelly.availableCores.logical'.  This option can in turn be set via
   environment variable 'R_PARALLELLY_AVAILABLECORES_LOGICAL' which is
   applied (only) when the package is loaded.

 * Add availableConnections() and freeConnections() to infer the maximum number
   of connections that the current R installation can have open at any time
   and how many of those are currently free to be used.  This limit is
   typically 128 but may be different in custom R installations that are built
   from source.


Version: 1.22.0 [2020-12-12]

NEW FEATURES:

 * Now availableCores() queries also Unix command 'nproc', if available. This
   will make it respect the number of CPU/cores limited by 'cgroups' and Linux
   containers.

 * PSOCK cluster workers are now set up to communicate using little endian
   (useXDR = FALSE) instead of big endian (useXDR = TRUE).  Since most modern
   systems use little endian, 'useXDR = FALSE' speeds up the communication
   noticeably (10-15%) on those systems.  The default value of this argument
   can be controlled by the R option 'parallelly.makeNodePSOCK.useXDR' or the
   corresponding environment variable 'R_PARALLELLY_MAKENODEPSOCK_USEXDR'.

BETA FEATURES:

 * Add cpuLoad() for querying the "average" system load on Unix-like systems.

 * Add freeCores() for estimating the average number of unused cores based
   on the average system load as given by cpuLoad().

BUG FIXES:

 * Except for environment variables 'R_FUTURE_AVAILABLECORES_FALLBACK' and
   'R_FUTURE_AVAILABLECORES_SYSTEM', none of the 'R_PARALLELLY_*' and
   'R_FUTURE_*' ones where recognized.
   

Version: 1.21.0 [2020-10-26]

SIGNIFICANT CHANGES:

 * Removed find_rshcmd() which was never meant to be exported.
 
NEW FEATURES:

 * makeClusterPSOCK() gained argument 'validate' to control whether or not the