@@ -68,6 +68,16 @@ makeClusterPSOCK <- function(workers, makeNode = makeNodePSOCK, port = c("auto",
     workers <- rep("localhost", times = workers)
   }
 
+  ## If we are sure that each node requires a connection, then ...
+  if (identical(makeNode, makeNodePSOCK)) {
+    ## ... can we create that many workers?
+    free <- freeConnections()
+    if (validate) free <- free - 1L
+    if (length(workers) > free) {
+      stop(sprintf("Cannot create %d parallel PSOCK nodes. We need one connection per worker but there are only %d connections left out of the maximum %d available on this R installation", length(workers), free, availableConnections()))
+    }
+  }
+
   tries <- as.integer(tries)
   stop_if_not(length(tries) == 1L, is.integer(tries), !is.na(tries), tries >= 1L)
 
