@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/maxConnections.R
+% Please edit documentation in R/availableConnections.R
 \name{availableConnections}
 \alias{availableConnections}
 \alias{freeConnections}
